syntax = "proto3";
package petri.rewards.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/duration.proto";
import "petri/rewards/v1beta1/gauge.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/petrichormoney/petri/x/rewards/types";

service Msg {
  rpc CreateGauge(MsgCreateGauge) returns (MsgCreateGaugeResponse);
  rpc ExternalRewardsLockers(ActivateExternalRewardsLockers) returns (ActivateExternalRewardsLockersResponse);
  rpc ExternalRewardsVault(ActivateExternalRewardsVault) returns (ActivateExternalRewardsVaultResponse);
  rpc ExternalRewardsLend(ActivateExternalRewardsLend) returns (ActivateExternalRewardsLendResponse);
}

message MsgCreateGauge {

  string from = 1 [ 
      (gogoproto.moretags) = "yaml:\"from\"" 
  ];
  uint64 gauge_type_id = 2;
  google.protobuf.Duration trigger_duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "trigger_duration,omitempty",
    (gogoproto.moretags) = "yaml:\"trigger_duration\""
  ];
  cosmos.base.v1beta1.Coin deposit_amount = 4 [
      (gogoproto.nullable) = false,
      (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  uint64 total_triggers = 5;
  google.protobuf.Timestamp start_time = 6 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  oneof kind {
    LiquidtyGaugeMetaData liquidity_meta_data = 7;
  }
  uint64 app_id = 8;
}
message MsgCreateGaugeResponse {}


message WhitelistAsset {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];

  uint64 asset_id = 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
}

message RemoveWhitelistAsset {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];

  uint64 asset_id = 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
}

message MsgWhitelistAssetResponse {}

message MsgRemoveWhitelistAssetResponse {}

message WhitelistAppIdVault {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id_vault\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message RemoveWhitelistAppIdVault {
  uint64 app_mapping_id   = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id_vault\""
  ];

  string from    = 2 [
    (gogoproto.moretags) = "yaml:\"from\""
  ];
}

message MsgWhitelistAppIdVaultResponse {}

message MsgRemoveWhitelistAppIdVaultResponse {}

message ActivateExternalRewardsLockers {
  uint64 app_mapping_id = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  uint64 asset_id = 2 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  int64 duration_days = 4 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  string depositor = 5 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  int64 min_lockup_time_seconds = 6 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
}

message ActivateExternalRewardsLockersResponse {}

message ActivateExternalRewardsVault {
  uint64 app_mapping_id = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  uint64 extended_pair_id = 2 [
    (gogoproto.moretags) = "yaml:\"extended_Pair_id\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  int64 duration_days = 4 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  string depositor = 5 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  int64 min_lockup_time_seconds = 6 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
}

message ActivateExternalRewardsVaultResponse {}

message ActivateExternalRewardsLend {
  uint64 app_mapping_id = 1 [
    (gogoproto.moretags) = "yaml:\"app_mapping_id\""
  ];
  uint64 c_pool_id = 2 [
    (gogoproto.moretags) = "yaml:\"c_pool_id\""
  ];
  repeated uint64 asset_id= 3 [
    (gogoproto.moretags) = "yaml:\"asset_id\""
  ];
  uint64 c_swap_app_id = 4 [
    (gogoproto.moretags) = "yaml:\"c_swap_app_id\""
  ];
  uint64 c_swap_min_lock_amount = 5 [
    (gogoproto.moretags) = "yaml:\"c_swap_app_id\""
  ];
  cosmos.base.v1beta1.Coin total_rewards = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"total_rewards\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  int64 master_pool_id = 7 [
    (gogoproto.moretags) = "yaml:\"master_pool_id\""
  ];
  int64 duration_days = 8 [
    (gogoproto.moretags) = "yaml:\"duration_days\""
  ];
  int64 min_lockup_time_seconds = 9 [
    (gogoproto.moretags) = "yaml:\"min_lockup_time_seconds\""
  ];
  string depositor = 10 [
    (gogoproto.moretags) = "yaml:\"depositor\""
  ];
}

message ActivateExternalRewardsLendResponse {}